--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contador de tiempo</title>
+    <title>Tiempo restante</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="contador">
-        <h1>Cuenta atrás para el evento</h1>
+        <h1>Cuenta atrás para el viaje</h1>
         <div id="reloj"></div>
     </div>
     <script src="script.js"></script>
